Fix collapsed size in compact mode

--- a/src/assets/scss/_plan-node.scss
+++ b/src/assets/scss/_plan-node.scss
@@ -22,7 +22,7 @@
     width: 140px;
   }
   .twod.plan-container.dot &,
-  .collapsed>& {
+  .twod.plan-container .collapsed>& {
     width: 50px;
   }
 
